Fix map items overflowing the bottom of the map

--- a/edit/style.css
+++ b/edit/style.css
@@ -49,6 +49,10 @@ a {
     z-index: 100;
 }
 
+.low-item.hovered {
+   transform: translateY(-70%);
+}
+
 .details {
    background: rgba(255, 255, 255, 0.7);
    border-radius: 10px;
